--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cezerin2-theme",
   "version": "1.0.0",
-  "description": "",
+  "description": "Theme for cezerin2.",
   "main": "dist/index.js",
   "license": "Unlicense",
   "scripts": {
@@ -14,6 +14,7 @@
     "@babel/preset-react": "^7.10.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "bulma": "^0.6.2",
+    "jsonwebtoken": "^8.5.1",
     "rc-slider": "^8.6.1",
     "react-image-gallery": "^0.8.7",
     "react-image-lightbox": "^4.6.0",
